# MyClosedGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  main.old.txt  shader_fragment.glsl  shader_vertex.glsl  teste.glsl  vert.txt  vfrag.txt
include/: VAO.hpp  camera.hpp  matrices.h  model_object.hpp  options.hpp  options_manager.hpp  primitives.hpp  renderer.hpp
include/rasterization/: color_buffer.hpp  edge.hpp  rasterization_engine.hpp  z_buffer.hpp
lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
lib/imgui/: imconfig.h  imgui_impl_opengl3.cpp
src/: VAO.cpp  camera.cpp  main.cpp  matrices.cpp  model_object.cpp  options_manager.cpp  renderer.cpp
src/rasterization/: color_buffer.cpp  edge.cpp  rasterization_engine.cpp  z_buffer.cpp
